--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,49 @@
-body {
+* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Open Sans', sans-serif;
+}
+
+body {
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ min-height: 100vh;
+ background: #e3f2fd;
+}
+
+.wrapper {
+ width: 65vmin;
+ height: 70vmin;
+ display: flex;
+ flex-direction: column;
+ overflow: hidden;
+ border-radius: 5px;
+ background: #293447;
+}
+
+.game-details {
+ color: #b8c6d6;
+ font-size: 1.2rem;
+ font-weight: 500;
+ padding: 20px 27px;
+ display: flex;
+ justify-content: space-between;
+}
+
+.play-board {
+ width: 100%;
+ height: 100%;
+ display: grid;
+ grid-template: repeat(30, 1fr) / repeat(30, 1fr);
+ background: #212837;
+}
+
+.food {
+ background: red;
+}
+
+.head {
+ background: #60cbff;
 }
