--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,39 @@ body {
 .head {
  background: #60cbff;
 }
+
+.controls {
+ display: none;
+ justify-content: space-between;
+}
+
+.controls i {
+ padding: 25px 0;
+ color: #b8c6dc;
+ text-align: center;
+ cursor: pointer;
+ font-size: 1.3rem;
+ width: calc(100% / 4);
+ border-right: 1px solid #171b26;
+}
+
+@media screen and (max-width: 800px) {
+ .wrapper {
+  width: 90vmin;
+  height: 115vmin;
+ }
+
+ .game-details {
+  font-size: 1rem;
+  padding: 15px 27px;
+ }
+
+ .controls {
+  display: flex;
+ }
+
+ .controls i {
+  padding: 15px 0;
+  font-size: 1rem;
+ }
+}
